fixed dashboard distortion issue when zoom out in browser, fixed dashboard css issues, implemented validation for chart title, and implemented validations error message for widget label and chart title

--- a/src/app/components/dashboard/chart-variant/chart-variant.component.scss
+++ b/src/app/components/dashboard/chart-variant/chart-variant.component.scss
@@ -48,3 +48,7 @@
   margin-top: -13px;
   margin-left: -5px;
 }
+
+::ng-deep .configurations-div mat-error {
+  margin: 5px 0;
+}
