--- a/src/app/components/dashboard/dashboard-configuration/dashboard-configuration.component.scss
+++ b/src/app/components/dashboard/dashboard-configuration/dashboard-configuration.component.scss
@@ -98,14 +98,13 @@
 
 #gridster-container {
   height: 75vh;
-  padding-top: 10px;
-  width: 98%;
 }
 
 ::ng-deep #gridster-container gridster .gridster-column {
   border-left: none;
   border-right: 10px solid white;
   box-sizing: initial;
+  background-color: #eeeeee;
 }
 
 ::ng-deep #gridster-container gridster .gridster-row {
@@ -115,10 +114,8 @@
 }
 
 ::ng-deep #gridster-container gridster {
-  border: 10px solid white;
-  margin: -10px 0px 0px 10px;
-  padding: 0 !important;
-  background-color: #eeeeee;
+  border-bottom: 5px solid white;
+  background-color: #ffffff;
 }
 
 ::ng-deep gridster-item {
