--- a/src/app/components/dashboard/widget-configuration-modal/widget-configuration-modal.component.scss
+++ b/src/app/components/dashboard/widget-configuration-modal/widget-configuration-modal.component.scss
@@ -130,3 +130,7 @@
 .report-list-height {
   height: 85px;
 }
+
+::ng-deep .widget-config-modal mat-error {
+  margin: 5px 0;
+}
